# MicroSSIM

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  coverage.yml
microssim/: _ssim_raw.py  micro_ms3im.py  micro_ssim.py
notebooks/: 0-download_data.ipynb  Download_data.ipynb  Evaluate.ipynb  EvaluateTwoStage.ipynb  data.ipynb  debugging.ipynb  eval_on_noise.ipynb  multi_quantile.ipynb
notebooks/reproducibility/: plot_utils.py
notebooks/utils/: __init__.py  plot_utils.py
ri_ssim/: __init__.py  _ri_ssim.py  _rims_ssim.py  _ssim_raw.py  micro_ms3im.py  micro_ssim.py  ri_ssim.py  rims_ssim.py
src/microssim/: __init__.py  _micro_ssim_internal.py  _ri_factor.py  micro_ms3im.py  micro_ssim.py  mse_ri_ssim.py
src/microssim/care/: __init__.py  care_normalization.py
src/microssim/image_processing/: __init__.py  background.py  care_normalization.py  linearize.py  micro_ssim_normalization.py
src/microssim/ri_factor/: __init__.py  mse_ri_factor.py  ri_factor.py
src/microssim/ssim/: __init__.py  ssim_utils.py
src/ri_ssim/: __init__.py  _ssim_raw.py  ri_ssim.py  rims_ssim.py  ssim.py
src/ri_ssim/utils/: __init__.py  remove_background.py  transformation_parameters.py
tests/: conftest.py  test_micro_ms3im.py  test_micro_ssim.py  test_ri_factor.py  test_ri_ssim.py  test_rims_ssim.py
tests/image_processing/: test_background.py  test_linearize.py  test_micro_ssim_normalization.py
tests/ri_factor/: test_mse_ri_factor.py  test_ri_factor.py
tests/ssim/: test_ssim_utils.py
